FIX: stop cutting off name options

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -19,7 +19,6 @@
   max-width: 560px;
   width: 100%;
   max-height: 90vh;
-  overflow-y: auto;
   animation: modal-slide-in 0.3s ease;
   border: 1px solid $color-primary-var3;
 
